## MODULE.bazel
module(
    name = "gz-msgs",
    repo_name = "org_gazebosim_gz-msgs",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "protobuf", version = "30.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "tinyxml2", version = "10.0.0")

# Gazebo Dependencies
bazel_dep(name = "rules_gazebo", version = "0.0.2")
bazel_dep(name = "gz-math")
bazel_dep(name = "gz-utils")

archive_override(
    module_name = "gz-math",
    strip_prefix = "gz-math-gz-math9",
    urls = ["https://github.com/gazebosim/gz-math/archive/refs/heads/gz-math9.tar.gz"],
)

archive_override(
    module_name = "gz-utils",
    strip_prefix = "gz-utils-gz-utils4",
    urls = ["https://github.com/gazebosim/gz-utils/archive/refs/heads/gz-utils4.tar.gz"],
)
